Fix colors and spacing for text and forms in listing detail view

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -35,7 +35,14 @@ ul { list-style: none; }
 a { text-decoration: none; color: inherit; }
 img, svg { display: block; height: 66.666vw; margin-left: auto; margin-right: auto; }
 
+::placeholder {
+    color: var(--color-primary);
+    opacity: .5;
+}
 
+input[type=number] {
+    color: var(--color-primary);
+}
 
 /* ------------------------------
                 HEADER
@@ -318,18 +325,11 @@ input:-webkit-autofill:focus {
 
 
 /* LISTING DETAIL */
-::placeholder {
-    color: var(--color-primary);
-    opacity: .5;
-}
-
-input[type=number] {
-    color: var(--color-primary);
-}
 .listing-detail-grid {
     display: grid;
     grid-template-columns: 2fr 1fr;
     box-sizing: border-box;
+
     border: 0px solid red;
 }
 
@@ -341,13 +341,13 @@ input[type=number] {
     background-color: var(--color-background);
     padding: 2.777vw;
     gap: 2.777vw;
-    border: 0 solid orange;
+    border: 2px solid orange;
 }
 
 .listing-detail-image {
     width: 63.889vw;
     height: 63.889vw;
-    background-color: var(--color-quaternary);
+    background-color: var(--color-tertiary);
     overflow: hidden;
     border: 0px solid red;
 }
@@ -359,7 +359,7 @@ img { width: 100%; height: 100%; object-fit: contain; }
     flex-direction: column;
     flex-wrap: nowrap;
     width: 27.779vw;
-    gap: 2.777vw;
+    gap: 2rem;
     margin: 0;
     border: 0 solid red;
 }
@@ -384,6 +384,7 @@ img { width: 100%; height: 100%; object-fit: contain; }
 }
 
 .listing-detail-button {
+    display: flex;
     position: relative;
     width: 100%;
     height: 2.777vw;
@@ -404,21 +405,22 @@ img { width: 100%; height: 100%; object-fit: contain; }
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
-    background: var(--color-primary);
-    color: var(--color-quaternary);
-    padding: .25rem .75rem;
+    background: var(--color-quaternary);
+    color: var(--color-primary);
+    padding: .5rem;
     font-size: .7rem;
     white-space: nowrap;
 }
 .listing-detail-button svg { pointer-events: none; }
+
 
 /* Contenedor general */
 .listing-detail-forms-container {
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: 1.388vw;
-    border: 0 solid red;
+    gap: .5rem;
+    border: 2px solid red;
 }
 
 /* Eliminar flechas del bid */
@@ -431,6 +433,7 @@ input[type=number] { -moz-appearance: textfield; }
 .listing-detail-bid,
 .listing-detail-textarea textarea,
 .comments-text {
+    display: flex;
     width: 100%;
     padding: .75rem;
     box-sizing: border-box;
